--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   http: 0.13.3
   url_launcher: ^5.4.10
+  flare_splash_screen: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
